Update benchmark.md